introduce image gallery componenet

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -82,7 +82,7 @@ body {
 }
 
 #overlay {
-  position: fixed;
+  position: absolute;
   top: 70px;
   z-index: 9;
 }
@@ -91,6 +91,7 @@ body {
   width: 50px;
   height: auto;
   padding-bottom: 15px;
+  padding-left: 15px;
 }
 
 .selector:hover {
