--- a/client/public/style.css
+++ b/client/public/style.css
@@ -92,6 +92,14 @@ body {
   height: auto;
   padding-bottom: 15px;
   padding-left: 15px;
+
+}
+
+.galleryImage {
+  object-fit: cover;
+  height: 50px;
+  width: 50px;
+  border: 3px solid gray;
 }
 
 .selector:hover {
