--- a/client/public/style.css
+++ b/client/public/style.css
@@ -56,10 +56,35 @@ body {
   padding-left: 50px;
 }
 
+#fullscreenContainer {
+  position: fixed;
+  margin: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.7);
+  z-index: 9;
+}
+
+.fullscreenImage {
+  display: block;
+  height: 700px;
+  width: 700px;
+  object-fit: cover;
+  margin: auto;
+  justify-self: center;
+}
+
 #mainImage {
   height: 480px;
   overflow: hidden;
   object-fit: cover;
+  justify-content: center;
+}
+
+#cart {
+  align-items: right;
 }
 
 #price {
@@ -94,6 +119,23 @@ body {
   padding-bottom: 15px;
   padding-left: 15px;
 
+}
+
+.fsButton {
+  position: absolute;
+  display: block;
+  top: 70px;
+  left: 380px;
+  float: right;
+  z-index: 100;
+}
+
+.fsButtonfs {
+  position: absolute;
+  display: block;
+  top: 15px;
+  right: 35px;
+  z-index: 100;
 }
 
 #imageContainer {
