--- a/client/public/style.css
+++ b/client/public/style.css
@@ -107,10 +107,18 @@ body {
   border-left: 2px dashed lightgray;
 }
 
-.photoStyle {
-  max-width: 100px;
-  max-height: auto;
+
+.gridPhoto {
+  height: 100px;
+  max-width: 95px;
+  min-width: 95px;
+  border: 1px solid grey;
 }
+
+.gridPhoto:hover {
+  transform: scale(1.15);
+}
+
 #overlay {
   position: absolute;
   top: 70px;
