--- a/client/public/style.css
+++ b/client/public/style.css
@@ -118,6 +118,25 @@ body {
   z-index: 9;
 }
 
+#cartContainer {
+  display: none;
+  position: fixed;
+  margin: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.7);
+  z-index: 20;
+}
+
+#cartBox {
+  background-color: white;
+  width: 100%;
+  height: fit-content;
+  
+}
+
 .selector {
   width: 50px;
   height: auto;
