--- a/client/public/style.css
+++ b/client/public/style.css
@@ -133,8 +133,9 @@ body {
 #cartBox {
   background-color: white;
   width: 100%;
-  height: fit-content;
+  height: 600px;
   margin-top: 70px;
+  overflow: scroll;
 }
 
 .selector {
