--- a/client/public/style.css
+++ b/client/public/style.css
@@ -120,6 +120,13 @@ body {
   transform: scale(1.15);
 }
 
+.cartImage {
+  object-fit: cover;
+  height: 100px;
+  width: 100px;
+  border: 3px solid gray;
+}
+
 #overlay {
   position: absolute;
   top: 70px;
@@ -136,7 +143,7 @@ body {
   height: 100%;
   background: rgba(51, 51, 51, 0.7);
   z-index: 20;
-  border-radius: 50% solid white;
+
 }
 
 #cartBox {
@@ -145,6 +152,9 @@ body {
   height: 600px;
   margin-top: 70px;
   overflow: scroll;
+  border-radius: 5%;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 #cartItems {
