--- a/client/public/style.css
+++ b/client/public/style.css
@@ -127,6 +127,12 @@ body {
   border: 3px solid gray;
 }
 
+#close {
+  position: absolute;
+  top: 75px;
+  left: 750px;
+}
+
 #overlay {
   position: absolute;
   top: 70px;
@@ -151,10 +157,15 @@ body {
   width: 100%;
   height: 600px;
   margin-top: 70px;
-  overflow: scroll;
   border-radius: 5%;
   padding-top: 10px;
   padding-left: 10px;
+}
+
+.cartList {
+  overflow: scroll;
+  width: 100%;
+  height: 550px;
 }
 
 #cartItems {
