--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,107 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  align-items: flex-start;
+  margin-left: 15px;
+}
+#nav {
+  margin-left: 0;
+}
+
+#fullscreenContainer {
+  position: fixed;
+  margin: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.7);
+  z-index: 9;
+}
+
+#mainImage {
+  height: 480px;
+  overflow: hidden;
+  object-fit: cover;
+  justify-content: center;
+}
+
+#cart {
+  align-items: right;
+}
+
+#price {
+  color: gray;
+  font-size: 11px;
+}
+
+#style {
+  color: darkgray;
+  display:inline-block;
+  padding-right: 5px;
+}
+
+#styleCategory {
+  color: darkslategray;
+  display: inline-block
+}
+
+#SpecialOverview {
+  border-left: 2px dashed lightgray;
+}
+
+#close {
+  position: absolute;
+  top: 75px;
+  left: 750px;
+}
+
+#overlay {
+  position: absolute;
+  top: 70px;
+  z-index: 9;
+}
+
+#cartContainer {
+  display: none;
+  position: fixed;
+  margin: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.7);
+  z-index: 20;
+
+}
+
+#cartBox {
+  background-color: white;
+  width: 100%;
+  height: 300px;
+  margin-top: 70px;
+  border-radius: 5%;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+#imageContainer {
+  height: 50px;
+  width: auto;
+}
+
+#cartItems {
+  padding-left: 10px;
+  border-bottom: 3px solid gray;
+  padding-bottom: 10px;
+  padding-top: 5px;
+}
+
+#cart {
+  display: block;
+  float: right;
+}
+
+#spacer {
+  height: 20px;
 }
 
 .info {
@@ -57,17 +158,6 @@ body {
   padding-left: 50px;
 }
 
-#fullscreenContainer {
-  position: fixed;
-  margin: auto;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.7);
-  z-index: 9;
-}
-
 .fullscreenImage {
   display: block;
   height: 700px;
@@ -76,38 +166,6 @@ body {
   margin: auto;
   justify-self: center;
 }
-
-#mainImage {
-  height: 480px;
-  overflow: hidden;
-  object-fit: cover;
-  justify-content: center;
-}
-
-#cart {
-  align-items: right;
-}
-
-#price {
-  color: gray;
-  font-size: 11px;
-}
-
-#style {
-  color: darkgray;
-  display:inline-block;
-  padding-right: 5px;
-}
-
-#styleCategory {
-  color: darkslategray;
-  display: inline-block
-}
-
-#SpecialOverview {
-  border-left: 2px dashed lightgray;
-}
-
 
 .gridPhoto {
   height: 100px;
@@ -127,52 +185,10 @@ body {
   border: 3px solid gray;
 }
 
-#close {
-  position: absolute;
-  top: 75px;
-  left: 750px;
-}
-
-#overlay {
-  position: absolute;
-  top: 70px;
-  z-index: 9;
-}
-
-#cartContainer {
-  display: none;
-  position: fixed;
-  margin: auto;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.7);
-  z-index: 20;
-
-}
-
-#cartBox {
-  background-color: white;
-  width: 100%;
-  height: 300px;
-  margin-top: 70px;
-  border-radius: 5%;
-  padding-top: 10px;
-  padding-left: 10px;
-}
-
 .cartList {
   overflow: scroll;
   width: 100%;
   height: 300px;
-}
-
-#cartItems {
-  padding-left: 10px;
-  border-bottom: 3px solid gray;
-  padding-bottom: 10px;
-  padding-top: 5px;
 }
 
 .selector {
@@ -200,21 +216,6 @@ body {
   z-index: 100;
 }
 
-#cart {
-  display: block;
-  float: right;
-}
-
-#imageContainer {
-  height: 50px;
-  width: auto;
-}
-
-#spacer {
-  height: 20px;
-
-}
-
 .galleryImage {
   object-fit: cover;
   height: 50px;
@@ -224,8 +225,4 @@ body {
 
 .selector:hover {
   transform: scale(1.15)
-}
-
-.QandA {
-  padding-left: 50px;
 }
