--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  margin-left: 15px;
+  background-color: #E0E1DD;
 }
 
 #fullscreenContainer {
@@ -31,13 +31,13 @@ body {
 }
 
 #style {
-  color: darkgray;
+  color: #415A77;
   display:inline-block;
   padding-right: 5px;
 }
 
 #styleCategory {
-  color: darkslategray;
+  color: #415A77;
   display: inline-block
 }
 
@@ -87,7 +87,7 @@ body {
 
 #cartItems {
   padding-left: 10px;
-  border-bottom: 3px solid gray;
+  border-bottom: 3px solid #415A77;
   padding-bottom: 10px;
   padding-top: 5px;
 }
@@ -102,7 +102,7 @@ body {
 }
 
 .info {
-  color: lightgray;
+  color: #415A77;
 }
 
 .desc {
@@ -153,6 +153,7 @@ body {
 .nav {
   height: 50px;
   padding-left: 50px;
+  color: #E0E1DD;
 }
 
 .fullscreenImage {
