--- a/client/public/style.css
+++ b/client/public/style.css
@@ -174,6 +174,11 @@ body {
   border: 1px solid grey;
 }
 
+.QandA {
+  background-color: #E0E1DD;
+  padding-bottom: 5px;
+}
+
 .gridPhoto:hover {
   transform: scale(1.15);
 }
